# arduino-rs-testing

./: Cargo.toml  README.md  avr-atmega328p.json  rustfmt.toml
scripts/: flash.sh
src/: halt.rs  main.rs
